# simple-pim-1754492683911

./: .commit_message  .coveragerc  .eslintrc.a11y.json  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.dev-ops.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_NOTES.md  SECURITY.md  TASK_NOTES.md  ai-fix-plan.txt  ai_patch.diff  ai_response.json  ai_suggestion.md  changelog.md  commit_message  commit_message.txt  jest.config.cjs  jest.config.js  next.config.js  pa11yci.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  repo-audit.json  roadmap-archive.md  roadmap.md  styles.css  vercel_build_issues.json  vision.md  vitest.config.ts
.ai-keepalive/: 1754740027576-patch-failed.txt
.github/: PULL_REQUEST_TEMPLATE.md
__tests__/: api-attribute-groups.test.js  api-attributes.test.js  attribute-groups.test.js  attributeGroups.test.js  attributeSuggestor.test.js  attributes.test.js  sku.test.js
a11y/: plan.md
accessibility/: AUDIT-2025-08-15.md
audits/: .gitignore  ROADMAP_NOTES.md  TEST_PLAN.md  ai_response.json  commit_message  repo-structure.md  roadmap-archive.md
components/: AttributeGroupDetail.js  AttributeGroupList.js  AttributeGroupsEditor.js  AttributeGroupsManager.js  ExportCsvLink.js  Header.js  Layout.js  PimAdminProductList.js  ProductList.js  ProductList.test.js  StockFilterToggle.js
config/: defaultConfig.js
data/: attribute-groups.json  attributes.json  dummy.json  products.json
docs/: CONTRIBUTING.md  VISION.md  api-routes.md  (+7 more)
lib/: sku.js  (+33 more)
(+446 files in other folders)
